<resources>
    <string name="app_name">Sedekah Sampah</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">Lainnya</string>
    <string name="displayName">Display Name</string>
    <string name="lihat_profile">Lihat lebih detail</string>

    <string name="client_screat">1GTtathPszxUhusphgc0BmLF </string>
    <string name="guest">Guest</string>
    <string name="Copyrigth">Copyrigth OverDrive Team</string>
    <string name="LogOut">LogOut</string>
    <string name="Help">Bantuan</string>
    <string name="Terms">Kebijakan Privasi</string>
    <string name="privasi">Persyaratan</string>
    <string name="rating">Beri Kami Rating</string>
    <string name="post">Post</string>
    <string name="buat">Buat</string>
    <string name="foto">Foto</string>
    <string name="title">Tuliskan Judul</string>
    <string name="tuliskan">Tuliskan Sesuatu</string>
    <string name="gallery">Gallery</string>
    <string name="more_dots">…</string>
    <string name="read_more">Selanjutnya</string>
    <string name="anymous">Kamu Tamu</string>
    <string name="silhakanLogin">Silahkan Login Dulu..</string>
    <string name="pemberitahuan">Pemberitahuan</string>
    <string name="terhapus">Terhapus</string>
    <string name="komentar">Tuliskan Sesuatu...</string>
    <string name="profile">Akun</string>
    <string name="noHp">No Hp : </string>
    <string name="valueHp">Belum ada no handphone</string>
    <string name="cari">Cari</string>
    <string name="chat">Chat</string>
    <string name="phoneNumber">Nomer Telepon</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="nama">Nama : </string>
    <string name="simpan">Simpan</string>
    <string name="simpan_tambhakan_nomer">Simpan dan Tambahkan Nomer HP</string>
    <string name="powerby">From</string>
    <string name="kembali">Kembali</string>
</resources>
