<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            app:title="@string/profile"
            app:layout_scrollFlags="scroll"
            android:id="@+id/toolbar_profile"
            android:background="@color/colorPrimary"
            app:titleTextColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/background_profile"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/tv_displayName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/displayName"
                android:textColor="@android:color/white"
                android:textSize="14sp"

                app:layout_constraintBottom_toTopOf="@+id/tv_nohp"
                app:layout_constraintEnd_toStartOf="@+id/edit_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <ImageView
                android:id="@+id/actionUpdateCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_camera_alt_black_24dp"
                android:tint="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/tv_displayName"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintStart_toEndOf="@+id/profile_image" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_displayName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@+id/edit_nohp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_displayName"
                app:layout_constraintTop_toBottomOf="@+id/profile_image">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_edit"
                    android:tint="@android:color/white" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_nohp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/noHp"
                android:textColor="@android:color/white"
                android:textSize="14sp"

                app:layout_constraintEnd_toStartOf="@+id/tv_value_noHp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_displayName" />

            <TextView
                android:id="@+id/tv_value_noHp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/valueHp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/edit_nohp"
                app:layout_constraintStart_toEndOf="@+id/tv_nohp"
                app:layout_constraintTop_toBottomOf="@+id/tv_displayName" />


            <FrameLayout
                android:id="@+id/edit_nohp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_value_noHp"
                app:layout_constraintTop_toBottomOf="@+id/edit_profile">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_edit"
                    android:tint="@android:color/white" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_post"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>